@@ -1,3 +1,9 @@
+* Thu Oct 29 7:12:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>
+
+Now kpager handles changes of number of desktops and desktop names 
+Fixed a small bug with centred backgrounds
+Made kpager more robust
+
 * Sun Oct 25 9:17:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>
 
 Arrows dissapear when not needed now
